Add create-edit creen

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@
 }
 
 
-/* Responsive Styles */
+/* Responsive Styles
 @media screen and (max-width: 767px) {
   .card-container > *:not(.circle-link),
   .terminal {
@@ -30,4 +30,4 @@
     display: none;
     visibility: hidden;
   }
-}
+} */
