--- a/src/app/component/book-table/book-table.component.html
+++ b/src/app/component/book-table/book-table.component.html
@@ -1,37 +1,30 @@
-<table mat-table [dataSource]="data" class="mat-elevation-z8">
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-  <!-- position Column -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-  </ng-container>
-
-  <!-- image Column -->
-  <ng-container matColumnDef="image">
-    <th mat-header-cell *matHeaderCellDef>image</th>
-    <td mat-cell *matCellDef="let element"> <img src= {{element.image}}/></td>
-  </ng-container>
-
-  <!-- name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-  </ng-container>
-
-  <!-- description Column -->
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>Description</th>
-    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-  </ng-container>
-
-  <!-- author Column -->
-  <ng-container matColumnDef="author">
-    <th mat-header-cell *matHeaderCellDef>Author</th>
-    <td mat-cell *matCellDef="let element">{{ element.author }}</td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+<table datatable [dtOptions]="dtOptions" class="row-border hover">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Image</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Author</th>
+      <th>...</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let book of data; let i = index">
+      <td>{{ book.id }}</td>
+      <td>{{ book.imageUrl }}</td>
+      <td>{{ book.name }}</td>
+      <td>{{ book.description }}</td>
+      <td>{{ book.author }}</td>
+      <td>
+        <button (click)="editBook(i)">edit</button>
+        <button (click)="deleteBook(i, book.id)">delete</button>
+      </td>
+    </tr>
+  </tbody>
+  <!-- <tbody *ngIf="data?.length == 0">
+    <tr>
+      <td colspan="2" class="no-data-available">No data!</td>
+    </tr>
+  </tbody> -->
 </table>
