--- a/src/app/screen/home/home.component.html
+++ b/src/app/screen/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="content" role="main">
   <app-tool-bar></app-tool-bar>
-  <app-search-bar></app-search-bar>
-  <app-alert-modal></app-alert-modal>
-  <app-book-table [data] = 'tableData'></app-book-table>
+  <div style="margin-top: 100px; margin-left: 50px; margin-right: 50px; ">
+    <app-book-table></app-book-table>
+  </div>
 </div>
 <app-alert-modal #modal></app-alert-modal>
