--- a/src/app/screen/create-edit-book/create-edit-book.component.css
+++ b/src/app/screen/create-edit-book/create-edit-book.component.css
@@ -1,9 +1,24 @@
-input{
-  width: 200px;
+input {
+  width: 500pt;
 }
 
-form{
+input.ng-valid {
+  border-left: 5px solid green;
+}
+
+input.ng-invalid {
+  border-left: 5px solid red;
+}
+form {
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.error {
+  color: red;
+}
+
+.form-group {
 }
