Navigate edit book

--- a/src/app/component/book-table/book-table.component.html
+++ b/src/app/component/book-table/book-table.component.html
@@ -6,7 +6,7 @@
       <th>Name</th>
       <th>Description</th>
       <th>Author</th>
-      <th>...</th>
+      <th>action</th>
     </tr>
   </thead>
   <tbody>
@@ -17,8 +17,8 @@
       <td>{{ book.description }}</td>
       <td>{{ book.author }}</td>
       <td>
-        <button (click)="editBook(i)">edit</button>
-        <button (click)="deleteBook(i, book.id)">delete</button>
+        <button id="edit" class="btn  btn-primary" (click)="editBook(book.id)">edit</button>
+        <button id="delete" class="btn  btn-primary" (click)="deleteBook(i, book.id)">delete</button>
       </td>
     </tr>
   </tbody>
