--- a/src/app/screen/login/login.component.html
+++ b/src/app/screen/login/login.component.html
@@ -1,27 +1,17 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <mat-card-title>Login</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <form class="example-form">
-      <table class="example-full-width" cellspacing="0">
-        <tr>
-          <td>
-            <mat-form-field class="example-full-width">
-            <input matInput (keypress)="keyEvent($event)" placeholder="Username" [(ngModel)]="username" name="username" required>
-            </mat-form-field>
-          </td>
-        </tr>
-        <tr>
-        <td><mat-form-field class="example-full-width">
-          <input matInput (keypress)="keyEvent($event)"  placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
-        </mat-form-field></td>
-      </tr></table>
-    </form>
-    <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button (click)="login()" color="primary">Login</button>
-  </mat-card-actions>
-</mat-card>
-<app-alert-modal #modal></app-alert-modal>
+<div>
+  <form (ngSubmit)="onSubmit()" #form="ngForm" [formGroup]="formGroup">
+    <div class="form-group">
+      <input class="form-control" (keypress)="keyEvent($event)" placeholder="Username" type="text"
+        [(ngModel)]="loginRequest.username" formControlName="username">
+      <span class="error" *ngIf="username?.errors?.required">Username is required</span>
+      <span class="error" *ngIf="username?.errors?.minlength">Min length is 10</span>
+    </div>
+    <div class="form-group">
+      <input class="form-control" (keypress)="keyEvent($event)" placeholder="Password"
+        [(ngModel)]="loginRequest.password" type="password" formControlName="password">
+      <span class="error" *ngIf="password?.errors?.required">Password is required</span>
+    </div>
+    <button class="btn btn-primary" type="submit" [disabled]="formGroup.invalid">Login</button>
+  </form>
+  <app-alert-modal #modal></app-alert-modal>
+</div>
