--- a/src/app/screen/login/login.component.css
+++ b/src/app/screen/login/login.component.css
@@ -1,10 +1,21 @@
-.example-card{
-  width: 100%;
-
+input {
+  width: 500pt;
+}
+form {
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
-  align-items: center
+  align-items: center;
 }
-mat-form-field{
-  width: 500px;
+
+input.ng-valid {
+  border-left: 5px solid green;
+}
+
+input.ng-invalid {
+  border-left: 5px solid red;
+}
+
+.error {
+  color: red;
 }
