Call api create, edit book

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,8 +2,13 @@
 
 }
 
+loader-container{
+  position: fixed;
+  width: 100%;
+  z-index: 99;
+}
 
-/* Responsive Styles
+
 @media screen and (max-width: 767px) {
   .card-container > *:not(.circle-link),
   .terminal {
@@ -30,4 +35,4 @@
     display: none;
     visibility: hidden;
   }
-} */
+}
