--- a/src/app/component/tool-bar/tool-bar.component.html
+++ b/src/app/component/tool-bar/tool-bar.component.html
@@ -14,6 +14,6 @@
       </path>
     </svg>
   </a>
-  <p>Logout</p>
+  <span style="cursor:pointer" (click)="logout()">Logout</span>
   <span style="position: absolute;  left:50%; color:white">{{screenName}}</span>
 </mat-toolbar>
