--- a/src/app/screen/create-edit-book/create-edit-book.component.html
+++ b/src/app/screen/create-edit-book/create-edit-book.component.html
@@ -3,37 +3,81 @@
   <div>
     <form #form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <input class="form-control" type="text" placeholder="name" formControlName="name" [(ngModel)]="newBook.name" />
-        <span class="error" *ngIf="name?.errors?.required && name?.touched"> Name is required</span>
-        <span class="error" *ngIf="name?.errors?.minlength && name?.touched">Min length is 4</span>
+        <input
+          class="form-control"
+          type="text"
+          placeholder="name"
+          formControlName="name"
+          [(ngModel)]="newBook.name"
+        />
+        <span class="error" *ngIf="name?.errors?.required && name?.touched">
+          Name is required</span
+        >
+        <span class="error" *ngIf="name?.errors?.minlength && name?.touched"
+          >Min length is 4</span
+        >
       </div>
       <div class="form-group">
-        <input class="form-control" type="text" placeholder="desciption" formControlName="description"
-          [(ngModel)]="newBook.description" />
+        <input
+          class="form-control"
+          type="text"
+          placeholder="desciption"
+          formControlName="description"
+          [(ngModel)]="newBook.description"
+        />
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
-        <span class="error" *ngIf="description?.errors?.maxlength && description?.touched"> Max length is 100</span>
+        <span
+          class="error"
+          *ngIf="description?.errors?.maxlength && description?.touched"
+        >
+          Max length is 100</span
+        >
       </div>
       <div class="form-group">
-        <input class="form-control" type="text" placeholder="author" formControlName="author"
-          [(ngModel)]="newBook.author" />
-        <span class="error" *ngIf="author?.errors?.required && author?.touched"> Name is required</span>
-        <span class="error" *ngIf="author?.errors?.maxlength && author?.touched"> Max length is 100</span>
+        <input
+          class="form-control"
+          type="text"
+          placeholder="author"
+          formControlName="author"
+          [(ngModel)]="newBook.author"
+        />
+        <span class="error" *ngIf="author?.errors?.required && author?.touched">
+          Name is required</span
+        >
+        <span
+          class="error"
+          *ngIf="author?.errors?.maxlength && author?.touched"
+        >
+          Max length is 100</span
+        >
       </div>
       <div class="form-group">
-        <input #image (change)="onFileSelected($event)" type="file" accept="image/*" />
-        <img height='100px' [src]="newBook.imageUrl">
+        <img height="100px" width="70px" [src]="newBook.imageUrl" />
+        <input
+          class="image"
+          #image
+          (change)="onFileSelected($event)"
+          type="file"
+          accept="image/*"
+        />
       </div>
 
-      <button class="btn btn-primary" type="submit" [disabled]="formGroup.invalid">Save</button>
+      <button
+        class="btn btn-primary"
+        type="submit"
+        [disabled]="formGroup.invalid"
+      >
+        Save
+      </button>
     </form>
   </div>
-  <br />{{ newBook.name }}
+  <!-- <br />{{ newBook.name }}
 
   <br />{{ newBook.description }}
 
   <br />{{ newBook.author }}
 
-  <br />{{ newBook.imageUrl }}
+  <br />{{ newBook.imageUrl }} -->
 </div>
 <app-alert-modal #modal></app-alert-modal>
