--- a/src/app/screen/home/home.component.css
+++ b/src/app/screen/home/home.component.css
@@ -1,3 +1,14 @@
 .content {
   display: inline;
 }
+
+.data-table {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 40px;
+}
+
+.btn-create-book {
+  margin-left: 50px;
+  margin-top: 50px;
+}
