--- a/src/app/screen/create-edit-book/create-edit-book.component.css
+++ b/src/app/screen/create-edit-book/create-edit-book.component.css
@@ -7,7 +7,7 @@ input.image {
 }
 
 img {
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   object-fit: cover;
   margin-right: 10px;
