--- a/src/app/screen/create-edit-book/create-edit-book.component.html
+++ b/src/app/screen/create-edit-book/create-edit-book.component.html
@@ -53,7 +53,7 @@
         >
       </div>
       <div class="form-group">
-        <img height="100px" width="70px" [src]="newBook.imageUrl" />
+        <img height="100px" width="70px" [src]="imageUrl" />
         <input
           class="image"
           #image
@@ -64,6 +64,7 @@
       </div>
 
       <button
+        #btnSubmit
         class="btn btn-primary"
         type="submit"
         [disabled]="formGroup.invalid"
