--- a/src/app/screen/login/login.component.html
+++ b/src/app/screen/login/login.component.html
@@ -1,17 +1,46 @@
 <div>
-  <form (ngSubmit)="onSubmit()" #form="ngForm" [formGroup]="formGroup">
-    <div class="form-group">
-      <input class="form-control" (keypress)="keyEvent($event)" placeholder="Username" type="text"
-        [(ngModel)]="loginRequest.username" formControlName="username">
-      <span class="error" *ngIf="username?.errors?.required">Username is required</span>
-      <span class="error" *ngIf="username?.errors?.minlength">Min length is 5</span>
-    </div>
-    <div class="form-group">
-      <input class="form-control" (keypress)="keyEvent($event)" placeholder="Password"
-        [(ngModel)]="loginRequest.password" type="password" formControlName="password">
-      <span class="error" *ngIf="password?.errors?.required">Password is required</span>
-    </div>
-    <button class="btn btn-primary" type="submit" [disabled]="formGroup.invalid">Login</button>
-  </form>
-  <app-alert-modal #modal></app-alert-modal>
+  <div class="title">
+    <h1>Login</h1>
+  </div>
+  <div>
+    <form (ngSubmit)="onSubmit()" #form="ngForm" [formGroup]="formGroup">
+      <div class="form-group">
+        <input
+          class="form-control"
+          (keypress)="keyEvent($event)"
+          placeholder="Username"
+          type="text"
+          [(ngModel)]="loginRequest.username"
+          formControlName="username"
+        />
+        <span class="error" *ngIf="username?.errors?.required"
+          >Username is required</span
+        >
+        <span class="error" *ngIf="username?.errors?.minlength"
+          >Min length is 5</span
+        >
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control"
+          (keypress)="keyEvent($event)"
+          placeholder="Password"
+          [(ngModel)]="loginRequest.password"
+          type="password"
+          formControlName="password"
+        />
+        <span class="error" *ngIf="password?.errors?.required"
+          >Password is required</span
+        >
+      </div>
+      <button
+        class="btn btn-primary"
+        type="submit"
+        [disabled]="formGroup.invalid"
+      >
+        Login
+      </button>
+    </form>
+    <app-alert-modal #modal></app-alert-modal>
+  </div>
 </div>
