--- a/src/app/component/alert-modal/alert-modal.component.html
+++ b/src/app/component/alert-modal/alert-modal.component.html
@@ -9,7 +9,7 @@
     <p>{{modalContent}}</p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="c('Ok click')">{{modalButton}}</button>
+    <button type="button" class="btn btn-outline-dark" (click)="okClick()">{{modalButton}}</button>
   </div>
 </ng-template>
 
