--- a/src/app/screen/login/login.component.html
+++ b/src/app/screen/login/login.component.html
@@ -1,45 +1,35 @@
 <div>
   <div class="title">
-    <h1>Login</h1>
+    <h1>{{ action }}</h1>
   </div>
   <div>
     <form (ngSubmit)="onSubmit()" #form="ngForm" [formGroup]="formGroup">
       <div class="form-group">
-        <input
-          class="form-control"
-          (keypress)="keyEvent($event)"
-          placeholder="Username"
-          type="text"
-          [(ngModel)]="loginRequest.username"
-          formControlName="username"
-        />
-        <span class="error" *ngIf="username?.errors?.required"
-          >Username is required</span
-        >
-        <span class="error" *ngIf="username?.errors?.minlength"
-          >Min length is 5</span
-        >
+        <input class="form-control" (keypress)="keyEvent($event)" placeholder="Username" type="text"
+          [(ngModel)]="loginRequest.username" formControlName="username" />
+        <span class="error" *ngIf="username?.errors?.required && username?.touched">Username is required</span>
+        <span class="error" *ngIf="username?.errors?.minlength&& username?.touched">Min length is 5</span>
       </div>
       <div class="form-group">
-        <input
-          class="form-control"
-          (keypress)="keyEvent($event)"
-          placeholder="Password"
-          [(ngModel)]="loginRequest.password"
-          type="password"
-          formControlName="password"
-        />
-        <span class="error" *ngIf="password?.errors?.required"
-          >Password is required</span
-        >
+        <input class="form-control" (keypress)="keyEvent($event)" placeholder="Password"
+          [(ngModel)]="loginRequest.password" type="password" formControlName="password" />
+        <span class="error" *ngIf="password?.errors?.required && password?.touched">Password is required</span>
       </div>
-      <button
-        class="btn btn-primary"
-        type="submit"
-        [disabled]="formGroup.invalid"
-      >
-        Login
+      <div class="form-group" *ngIf="!isLogin">
+        <input class="form-control" (keypress)="keyEvent($event)" placeholder="Re-Password" type="password"
+          formControlName="rePassword" />
+        <span class="error" *ngIf="rePassword?.errors?.required && rePassword?.touched">Password is required</span>
+        <br>
+        <span class="error" *ngIf="rePassword?.errors?.repassowrd && rePassword?.touched">Re-password is not
+          match</span>
+      </div>
+
+      <button class="btn btn-primary" type="submit" [disabled]="formGroup.invalid">
+        {{ action }}
       </button>
+      <div class="form-group" *ngIf="isLogin">
+        <a href="/register"> Or Register</a>
+      </div>
     </form>
     <app-alert-modal #modal></app-alert-modal>
   </div>
