--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="content">
-  <div class="loader-container"  *ngIf="loaderService.isLoading | async">
+  <app-tool-bar *ngIf="!isOnLogin"></app-tool-bar>
+  <div class="loader-container" *ngIf="loaderService.isLoading | async">
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
   </div>
   <router-outlet></router-outlet>
