--- a/src/app/screen/home/home.component.html
+++ b/src/app/screen/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="content" role="main">
+<div class="content" role="main" *ngIf="isLoggedIn">
   <div class="container pt-3">
     <div class="row">
       <div class="action col-md-12">
