--- a/src/app/component/book-table/book-table.component.css
+++ b/src/app/component/book-table/book-table.component.css
@@ -43,14 +43,17 @@ p {
 }
 
 .paginator {
-  display: flex;
-  justify-content: flex-start;
+  width: 100%;
   flex: 1;
 }
 
 .input-search {
-  justify-content: flex-end;
+  justify-content: flex-start;
   flex: 1;
+}
+
+button.btn-create-book{
+  position: absolute;
 }
 
 @media (max-width: 800px) {
