--- a/src/app/component/book-table/book-table.component.html
+++ b/src/app/component/book-table/book-table.component.html
@@ -1,12 +1,11 @@
 <div class="table-toolbar">
-  <div class="paginator">
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <div>
+    <button class="btn-create-book btn btn-primary" (click)="createBook()">Create book</button>
   </div>
-  <div class="input-search">
-    <mat-form-field style="display: flex;" *ngIf="!isOnAdvancedSearch">
-      <mat-label>Search by name</mat-label>
-      <input matInput [(ngModel)]="searchString" placeholder="Search book" value="" (keypress)="keyEvent($event)">
-    </mat-form-field>
+  <div class="paginator">
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+
+    </mat-paginator>
   </div>
 </div>
 
@@ -49,10 +48,10 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let element; let i = index">
-      <button id="edit" class="btn btn-primary" (click)="editBook(element.id)">
+      <button #btnEdit id="edit" class="btn btn-primary" (click)="editBook(element.id)">
         edit
       </button>
-      <button id="delete" class="btn btn-primary" (click)="deleteBook(i, element.id)">
+      <button #btnDelete id="delete" class="btn btn-primary" (click)="deleteBook(i, element.id)" (disable)="true">
         delete
       </button>
     </td>
