--- a/src/app/component/tool-bar/tool-bar.component.css
+++ b/src/app/component/tool-bar/tool-bar.component.css
@@ -1,46 +1,16 @@
-.toolbar {
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  background-color: #1976d2;
-  color: white;
-  font-weight: 600;
-}
-
-.toolbar img {
-  margin: 0 16px;
-}
-
-.toolbar .Header-link {
-  height: 40px;
-  margin: 0 16px;
-}
-
-.toolbar .Header-link:hover {
-  opacity: 0.8;
-}
-
-.spacer {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
-}
-
-svg.material-icons {
-  height: 24px;
-  width: auto;
-}
-
-svg.material-icons:not(:last-child) {
-  margin-right: 8px;
-}
-
-p {
-  color: black;
+.example-spacer {
+  flex: 1 1 auto;
   margin-left: 10px;
-  margin-top: 5px;
+}
+
+div.input-search {
+  margin-left: 20px;
+  width: 30%;
+}
+
+button.btn-adv-search{
+  margin-left: 20px;
+}
+span.app-name{
+  cursor: pointer;
 }
