--- a/src/app/component/tool-bar/tool-bar.component.html
+++ b/src/app/component/tool-bar/tool-bar.component.html
@@ -1,19 +1,22 @@
-<!-- Toolbar -->
-<mat-toolbar class="toolbar">
-  <a href="/home">
-    <img width="40" alt="Home" src="https://image.flaticon.com/icons/png/128/926/926358.png" />
-  </a>
+<p>
+  <mat-toolbar color="primary">
+    <button mat-icon-button (click)="onMenuClick()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="app-name" routerLink="/home">Book manager</span>
+    <div class="input-search input-group" *ngIf="isDisplayed">
+      <input type="text" class="form-control" placeholder="Search by name" [(ngModel)]="searchInput">
+      <div class="input-group-append">
+        <button class="btn btn-primary" type="button" (click)="onSearch()">Search</button>
+      </div>
+    </div>
+    <button class="btn-adv-search btn btn-primary btn-search-book" routerLink="/search" *ngIf="isDisplayed">Advanced
+      Search</button>
+    <span class="example-spacer">
 
-  <span style="color: white">Book manager</span>
-  <div class="spacer"></div>
-
-  <a class="Header-link" href="https://github.com/vietcoscc/BookManager">
-    <svg height="32" viewBox="0 0 16 16" width="32" aria-hidden="true">
-      <path fill-rule="evenodd"
-        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-      </path>
-    </svg>
-  </a>
-  <span style="cursor:pointer" (click)="logout()">Logout</span>
-  <span style="position: absolute;  left:50%; color:white">{{screenName}}</span>
-</mat-toolbar>
+    </span>
+    <button mat-icon-button (click)="logout()">
+      <mat-icon>exit_to_app</mat-icon>
+    </button>
+  </mat-toolbar>
+</p>
