--- a/src/app/component/book-table/book-table.component.html
+++ b/src/app/component/book-table/book-table.component.html
@@ -9,10 +9,19 @@
 </div>
 
 <table mat-table [dataSource]="data">
+  <colgroup>
+    <col span="1" style="width: 5%;">
+    <col span="1" style="width: 10%;">
+    <col span="1" style="width: 15%;">
+    <col span="1" style="width: 25%;">
+    <col span="1" style="width: 15%;">
+    <col span="1" style="width: 20%;">
+  </colgroup>
+
   <!-- Id Column -->
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let element;let i = index">
+    <td mat-cell *matCellDef="let element;let i = index" style="text-align: center;">
       <div id="id">{{ element.id }}</div>
     </td>
   </ng-container>
@@ -21,12 +30,10 @@
   <ng-container matColumnDef="image">
     <th mat-header-cell *matHeaderCellDef>Image</th>
     <td mat-cell *matCellDef="let element">
-      <div id="book-cover">
-        <!-- <lib-ngx-image-zoom [thumbImage]="imageThumbnailUrl(element)" [magnification]="1" [enableScrollZoom]="true"
+      <!-- <lib-ngx-image-zoom [thumbImage]="imageThumbnailUrl(element)" [magnification]="1" [enableScrollZoom]="true"
           [enableLens]="true" [lensWidth]="200" [fullImage]="imageUrl(element)">
         </lib-ngx-image-zoom> -->
-        <img id="book-image" class="rounded" [src]="imageThumbnailUrl(element)" />
-      </div>
+      <img id="book-image" class="rounded" [src]="imageThumbnailUrl(element)" (click)="onViewImageDetail(element)" />
     </td>
   </ng-container>
 
@@ -51,14 +58,16 @@
   <!-- Aciton Column -->
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
-    <td mat-cell *matCellDef="let element; let i = index">
-      <button #btnEdit id="edit" class="btn btn-primary" (click)="editBook(element.id)">
-        edit
-      </button>
-      <button #btnDelete id="delete" class="btn btn-primary" (click)="deleteBook(i, element.id, btnDelete)"
-        (disable)="true">
-        delete
-      </button>
+    <td mat-cell *matCellDef="let element; let i = index" style="width: 20%;">
+      <div>
+        <button #btnEdit id="edit" class="btn btn-primary" (click)="editBook(element.id)">
+          edit
+        </button>
+        <button #btnDelete id="delete" class="btn btn-primary" (click)="deleteBook(i, element.id, btnDelete)"
+          (disable)="true">
+          delete
+        </button>
+      </div>
     </td>
   </ng-container>
 
